main.tf
resource "aws_instance" "sandbox" {
  ami = "ami-0ba9883b710b05ac6"
  instance_type = t2.micro
}
